--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "07currencyconverter",
-  "private": true,
+  
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,8 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+    
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
